--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FASCO</title>
+    <title>Сайт бренду жіночого fashion-одягу</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
@@ -417,5 +417,6 @@
     </div>
     <script src="assets/scripts/scipt.js"></script>
 </body>
+
 
 </html>
