--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <a class="btn btn-season" href="#">Купити зараз</a>
                     <div class="timer-container">
-                        <h3>Поспішайте, перш ніж буде занадто пізно!</h3>
+                        <h3>Поспішайте, перш ніж буде пізно!</h3>
                         <div class="timer-wrapper">
                             <div class="time-box">
                                 <p class="time">02</p>
@@ -414,6 +414,7 @@
 
 
 </html>
+
 
 
 
