--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 <div class="deal-info-container">
                     <div class="text-box">
                         <h2>Пропозиції місяця</h2>
-                        <p class="regular-text">Відкрийте для себе унікальні пропозиції цього місяця! Наші ексклюзивні моделі створені для сучасних жінок, які цінують стиль та комфорт. Оберіть ідеальний образ для будь-якої нагоди.
+                        <p class="regular-text">Відкрийте для себе унікальні пропозиції цього місяця! 
+                            Наші ексклюзивні моделі створені для сучасних жінок, які цінують стиль та комфорт.
+                            Оберіть ідеальний образ для будь-якої нагоди.
                         </p>
                     </div>
                     <a class="btn btn-season" href="#">Купити зараз</a>
@@ -138,7 +140,8 @@
         <section class="new">
             <div class="text-box">
                 <h2>Нові надходження</h2>
-                <p class="regular-text">Знайомтеся з нашими свіжими надходженнями! Кожна модель унікальна та створена з любов'ю до деталей. Від робочого дресу до вечірніх нарядів - у нас є все для вашого ідеального гардеробу.
+                <p class="regular-text">Знайомтеся з нашими свіжими надходженнями! Кожна модель унікальна та створена з любов'ю до деталей. 
+                    Від робочого дресу до вечірніх нарядів - у нас є все для вашого ідеального гардеробу.
                 </p>
             </div>
             <div class="new-cards-wrapper">
@@ -254,7 +257,9 @@
                     <p class="regular-text">Жіноча колекція</p>
                     <h2>Peaky Blinders</h2>
                     <p class="description">Ексклюзивна колекція</p>
-                    <p class="regular-text">Натхненна легендарним серіалом, ця колекція поєднує в собі елегантність 1920-х років із сучасним стилем. Ідеальний вибір для впевнених у собі жінок, які цінують якість та унікальність.
+                    <p class="regular-text">Натхненна легендарним серіалом, ця колекція поєднує в собі елегантність 
+                        1920-х років із сучасним стилем. Ідеальний вибір для 
+                        впевнених у собі жінок, які цінують якість та унікальність.
                     </p>
                     <div class="size-wrapper">
                         <p class="regular-text">Розмір:</p>
@@ -298,7 +303,7 @@
         <section class="instagram">
             <div class="text-box">
                 <h2>Слідкуйте за нами в Instagram</h2>
-                <p class="regular-text">Приєднуйтесь до нашої інстаграм-спільноти! Дивіться за кулісами створення колекцій, отримуйте стильні поради та будьте першими, хто дізнається про новинки та акції.
+                <p class="regular-text">Приєднуйтесь до нашого інстаграм! Дивіться за кулісами створення колекцій, отримуйте стильні поради та будьте першими, хто дізнається про новинки та акції.
                 </p>
             </div>
             <div class="instagram-gallery">
@@ -368,7 +373,8 @@
                 <div class="subscribe-card">
                     <div class="text-box">
                         <h2>Підпишіться на нашу розсилку</h2>
-                        <p class="regular-text">Отримуйте першими інформацію про нові колекції, ексклюзивні знижки та стильні поради. Тільки корисна інформація без спаму!</p>
+                        <p class="regular-text">Отримуйте першими інформацію про нові колекції, ексклюзивні знижки та стильні поради. 
+                            Тільки корисна інформація без спаму!</p>
                     </div>
                     <form>
                         <input class="company-email" type="email" placeholder="michael@ymail.com">
@@ -414,6 +420,7 @@
 
 
 </html>
+
 
 
 
