--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="./assets/images/second-main-page.webp" alt="">
                 </div>
                 <div class="hero-text-box">
-                    <div class="hero-tag uppercase">топ <span>продаж</span></div>
+                    <div class="hero-tag uppercase">мега <span>знижка</span></div>
                     <h1 class="hero-title uppercase">нова колекція</h1>
                     <div class="hero-button">
                         <a href="#" class="btn btn__sale uppercase">Купити зараз</a>
@@ -420,6 +420,7 @@
 
 
 </html>
+
 
 
 
