--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="text-box">
                 <h2>Нові надходження</h2>
                 <p class="regular-text">Знайомтеся з нашими свіжими надходженнями! Кожна модель унікальна та створена з любов'ю до деталей. 
-                    Від робочого дресу до вечірніх нарядів - у нас є все для вашого ідеального гардеробу.
+                    Від робочого дресу до вечірніх нарядів - у нас є все!
                 </p>
             </div>
             <div class="new-cards-wrapper">
@@ -420,6 +420,7 @@
 
 
 </html>
+
 
 
 
