--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="new-info">
                         <div class="product-info-wrap">
                             <div class="product-name-wrap">
-                                <h3 class="product-name">Теплий светрr</h3>
+                                <h3 class="product-name">Теплий светр</h3>
                                 <p class="product-producer">Al Karam</p>
                             </div>
                             <img src="./assets/icons/stars.svg" alt="">
@@ -420,6 +420,7 @@
 
 
 </html>
+
 
 
 
