--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 <div class="subscribe-card">
                     <div class="text-box">
                         <h2>Підпишіться на нашу розсилку</h2>
-                        <p class="regular-text">Отримуйте першими інформацію про нові колекції, ексклюзивні знижки та стильні поради. 
+                        <p class="regular-text">Отримуйте першими інформацію про нові колекції, ексклюзивні знижки та стильні поради. <br>
                             Тільки корисна інформація без спаму!</p>
                     </div>
                     <form>
@@ -420,6 +420,7 @@
 
 
 </html>
+
 
 
 
