--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Сайт бренду жіночого fashion-одягу</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="icon" href="./assets/images/shop_icon.jpg">
 </head>
 
 <body>
@@ -420,6 +421,7 @@
 
 
 </html>
+
 
 
 
