--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FASCO - ваш улюблений бренд жіночого одягу. Нові колекції, знижки та пропозиції.">
     <title>Сайт бренду жіночого fashion-одягу</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
-    <link rel="icon" href="./assets/images/shop_icon.jpg">
+    <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
 <body>
@@ -27,21 +28,21 @@
                             <a href="#">Головна</a>
                         </li>
                         <li>
-                            <a href="#">Пропозиції</a>
+                            <a href="shop.html">Пропозиції</a>
                         </li>
                         <li>
-                            <a href="#">Новинки</a>
+                            <a href="shop.html">Новинки</a>
                         </li>
                         <li>
-                            <a href="#">Пакети</a>
+                            <a href="404.html">Пакети</a>
                         </li>
                     </ul>
                     <ul class="main-menu-registration">
                         <li>
-                            <a href="#" class="main-login-link">Увійти</a>
+                            <a href="signin.html" class="main-login-link">Увійти</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn__header">Зареєструватися</a>
+                            <a href="signup.html" class="btn btn__header">Зареєструватися</a>
                         </li>
                     </ul>
                 </nav>
@@ -59,7 +60,7 @@
                     <div class="hero-tag uppercase">мега <span>знижка</span></div>
                     <h1 class="hero-title uppercase">нова колекція</h1>
                     <div class="hero-button">
-                        <a href="#" class="btn btn__sale uppercase">Купити зараз</a>
+                        <a href="shop.html" class="btn btn__sale uppercase">Купити зараз</a>
                     </div>
                 </div>
                 <div class="hero-image-container">
