a few code changes

--- a/index.html
+++ b/index.html
@@ -345,12 +345,12 @@
                         <div class="review-card active">
                             <img class="reviewer-photo" src="./assets/images/review-2.webp" alt="Марія П.">
                             <div class="review-info">
-                                <p class="review-text">"Дуже задоволена покупкою! Все прийшло швидко, а якість тканини
-                                    перевершила мої очікування. Обов'язково рекомендую цей магазин подругам."</p>
+                                <p class="review-text">"Дуже задоволений покупкою! Все прийшло швидко, а якість тканини
+                                    перевершила мої очікування. Обов'язково рекомендую цей магазин."</p>
                                 <img class="review-stars" src="./assets/icons/stars.svg" alt="5 зірок">
                                 <div class="review-autor-container">
-                                    <h3 class="reviewer-name">Марія П.</h3>
-                                    <p class="reviewer-job">Дизайнерка</p>
+                                    <h3 class="reviewer-name">Антон П.</h3>
+                                    <p class="reviewer-job">Дизайнер</p>
                                 </div>
                             </div>
                         </div>
