changed semantic tags

--- a/404.html
+++ b/404.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сторінку не знайдено (404) - FASCO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/404.css">
-    
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
@@ -42,14 +40,15 @@
     </section>
 
     <main>
-        <div class="error-page-container">
+        <section class="error-page-container">
             <div class="error-content">
                 <h1 class="error-code">404</h1>
                 <h2 class="error-title font-title">Сторінку не знайдено</h2>
-                <p class="regular-text">Ой! Здається, сторінка, яку ви шукаєте, була переміщена, видалена або ніколи не існувала.</p>
+                <p class="regular-text">Ой! Здається, сторінка, яку ви шукаєте, була переміщена, видалена або ніколи не
+                    існувала.</p>
                 <a href="index.html" class="btn btn-home">Повернутися на головну</a>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -71,4 +70,5 @@
 
     <script src="assets/scripts/scipt.js"></script>
 </body>
+
 </html>
