--- a/signin.html
+++ b/signin.html
@@ -12,19 +12,16 @@
 </head>
 
 <body>
-
-    <div class="auth-container">
-
-        <div class="auth-image-panel">
+    <main class="auth-container">
+        <aside class="auth-image-panel">
             <img src="./assets/images/signin.webp" alt="Fashion Model">
-        </div>
-
-        <div class="auth-form-panel">
+        </aside>
+        <section class="auth-form-panel">
             <div class="auth-form-content">
 
-                <div class="logo font-title">
+                <header class="logo font-title">
                     <a href="index.html">FASCO</a>
-                </div>
+                </header>
 
                 <h1>Вхід у FASCO</h1>
 
@@ -54,14 +51,16 @@
                         <a href="signup.html" class="btn-secondary">Зареєструватись</a>
                     </div>
 
-                    <a href="#" class="forgot-password">Забули пароль?</a>
+                    <a href="forgetpassword.html" class="forgot-password">Забули пароль?</a>
                 </form>
 
             </div>
 
-            <p class="auth-footer">FASCO Умови та Положення</p>
-        </div>
-    </div>
+            <footer class="auth-footer">
+                FASCO Умови та Положення
+            </footer>
+        </section>
+    </main>
 
 </body>
 
