--- a/signup.html
+++ b/signup.html
@@ -12,16 +12,18 @@
 
 <body>
 
-    <div class="auth-container">
-        <div class="auth-image-panel">
-            <img src="./assets/images/signup.webp" alt="Fashion Model">
-        </div>
+    <main class="auth-container">
 
-        <div class="auth-form-panel">
+        <aside class="auth-image-panel">
+            <img src="./assets/images/signup.webp" alt="Fashion Model">
+        </aside>
+
+        <section class="auth-form-panel">
             <div class="auth-form-content">
-                <div class="logo font-title">
+
+                <header class="logo font-title">
                     <a href="index.html">FASCO</a>
-                </div>
+                </header>
 
                 <h1>Створити акаунт</h1>
 
@@ -78,9 +80,11 @@
 
             </div>
 
-            <p class="auth-footer">FASCO Умови та Положення</p>
-        </div>
-    </div>
+            <footer class="auth-footer">
+                FASCO Умови та Положення
+            </footer>
+        </section>
+    </main>
 
 </body>
 
