updated modal window

--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Центр підтримки</a></li>
+                    <li><a href="#" id="supportBtn">Центр підтримки</a></li>
                     <li><a href="#">Оплата</a></li>
-                    <li><a href="#" id="contactBtn">Контакти</a></li>
+                    <li><a href="#">Контакти</a></li>
                     <li><a href="#">Кар'єра</a></li>
                     <li><a href="#">Блог</a></li>
                     <li><a href="#">Часті запитання</a></li>
