a few link update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             Оберіть ідеальний образ для будь-якої нагоди.
                         </p>
                     </div>
-                    <a class="btn btn-season" href="#">Купити зараз</a>
+                    <a class="btn btn-season" href="shop.html">Купити зараз</a>
                     <div class="timer-container">
                         <h3>Поспішайте, перш ніж буде пізно!</h3>
                         <div class="timer-wrapper">
@@ -251,7 +251,7 @@
                     </div>
                 </div>
             </div>
-            <a class="btn btn-new" href="">Дивитися більше</a>
+            <a class="btn btn-new" href="shop.html">Дивитися більше</a>
         </section>
         <section class="promotion">
             <div class="promotion-wrapper">
@@ -269,7 +269,7 @@
                         <p class="promotion-size">M</p>
                     </div>
                     <p class="promotion-price">$100.<span>00</span></p>
-                    <a class="btn" href="">Купити зараз</a>
+                    <a class="btn" href="shop.html">Купити зараз</a>
                 </div>
             </div>
             <div class="advantages-wrapper">
