changed class name

--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
         <section class="shop-page-container">
             <div class="shop-header">
                 <h1>Мода</h1>
-                <div class="breadcrumbs">
+                <div class="navigation-path">
                     <a href="index.html">Головна</a> / <span>Мода</span>
                 </div>
             </div>
