--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Сторінка реєстрації. Створіть акаунт FASCO за допомогою електронної пошти та пароля або через соціальні мережі.">
     <title>Реєстрація - FASCO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/auth.css">
