--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Магазин одягу FASCO. Перегляньте наші пропозиції та новинки.">
     <title>Магазин - FASCO</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
@@ -11,9 +13,7 @@
 
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/shop.css">
-
     <link rel="icon" href="./assets/images/shop_icon.webp">
-    <meta name="description" content="Магазин одягу FASCO. Перегляньте наші пропозиції та новинки.">
 </head>
 
 <body>
