--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Сторінка забули пароль. Відновіть доступ до вашого акаунту FASCO, надіславши код на вашу електронну пошту або номер телефону.">
     <title>Забули пароль - FASCO</title>
     <link rel="stylesheet" href="./assets/styles/auth.css">
