--- a/signin.html
+++ b/signin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Сторінка входу. Увійдіть до свого акаунту FASCO за допомогою електронної пошти та пароля або через соціальні мережі.">
     <title>Вхід - FASCO</title>
 
