--- a/404.html
+++ b/404.html
@@ -9,11 +9,10 @@
     <title>Сторінку не знайдено (404) - FASCO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
-    <link rel="stylesheet" href="./assets/styles/404.css">
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
-<body>
+<body class="error-page">
 
     <section class="header-section">
         <header class="header d-flex">
