--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Сторінка забули пароль. Відновіть доступ до вашого акаунту FASCO, надіславши код на вашу електронну пошту або номер телефону.">
     <title>Забули пароль - FASCO</title>
-    <link rel="stylesheet" href="./assets/styles/auth.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
-<body>
+<body class="auth-page">
 
     <main class="auth-container">
 
