--- a/shop.html
+++ b/shop.html
@@ -10,13 +10,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
     <link rel="stylesheet" href="./assets/styles/styles.css">
-    <link rel="stylesheet" href="./assets/styles/shop.css">
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
-<body>
+<body class="shop-page">
     <section class="header-section">
         <header class="header d-flex">
             <div class="content-wrap d-flex w-full justify-between items-center">
