--- a/signup.html
+++ b/signup.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Сторінка реєстрації. Створіть акаунт FASCO за допомогою електронної пошти та пароля або через соціальні мережі.">
     <title>Реєстрація - FASCO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link rel="stylesheet" href="./assets/styles/auth.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
-<body>
+<body class="auth-page">
 
     <main class="auth-container">
 
