--- a/signin.html
+++ b/signin.html
@@ -9,11 +9,11 @@
     <title>Вхід - FASCO</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link rel="stylesheet" href="./assets/styles/auth.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="icon" href="./assets/images/shop_icon.webp">
 </head>
 
-<body>
+<body class="auth-page">
     <main class="auth-container">
         <aside class="auth-image-panel">
             <img src="./assets/images/signin.webp" alt="Fashion Model">
